--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgba(187, 250, 250, 0.823);
+}
+
 #root {
   max-width: 1280px;
   /* margin: 0 auto; */
@@ -5,28 +9,62 @@
   text-align: center;
 }
 
+h2 {
+  margin: 0;
+}
+
 .pageLayout {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 350px 3fr;
   gap: 2rem;
 }
 
-.inputLabel {
-  color: blue;
+.sectionHeading {
+  padding-bottom: 1rem;
 }
 
-.inputBox {}
+.inputLabel {
+  color: rgb(0, 0, 130);
+  font-weight: bold;
+}
+
+.inputBox {
+  width: 180px;
+}
 
 .inputSection {
+  background-color: white;
   border: 1px solid black;
-  border-radius: 10%;
+  border-radius: 30px;
   text-align: left;
   padding: 1rem;
   margin-bottom: 1rem;
-  box-shadow: 7px 7px 10px lightblue;
+  box-shadow: 7px 7px 10px rgb(137, 171, 182);
+  text-align: center;
+}
+
+.inputContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 7px;
+
+}
+
+/* .container {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: left
+} */
+
+.workEducationContainer {
+  border-bottom: 1px solid rgb(186, 186, 186);
+  margin-top: 1rem;
 }
 
 .resultsContainer {
+  background-color: white;
   display: flex;
   flex-direction: column;
   height: 1000px;
@@ -55,4 +93,34 @@
 
 .contactInfo {
   text-align: end;
+}
+
+/* .itemHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: black;
+  background-color: rgba(110, 110, 110, 0.288);
+  padding: 1rem;
+  height: 10px;
+  margin-bottom: 1rem;
+  border-radius: 30px;
+} */
+
+.addButton {
+  background-color: rgb(191, 191, 191);
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+.deleteBtn {
+  color: rgb(250, 250, 250);
+  background-color: rgb(204, 97, 97);
+  font-weight: bold;
+  border: 1px solid black;
+  height: 30px;
+  width: auto;
+  text-align: center;
+  line-height: 3px;
+  margin-bottom: 7px;
 }
