--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgba(156, 194, 194, 0.823);
   font-family: 'Roboto', sans-serif;
-  max-width: 1280px;
+  width: 100%;
 }
 
 #root {
@@ -20,8 +20,10 @@ h2 {
   gap: 2rem;
 }
 
+/* input styling */
+
 .sectionHeading {
-  padding-bottom: 0.5rem;
+  font-size: 20px;
 }
 
 .inputLabel {
@@ -35,7 +37,7 @@ h2 {
 
 .inputSection {
   border: 1px solid rgb(137, 137, 137);
-  padding: 1rem;
+  padding: 0.25rem;
   box-shadow: 7px 7px 10px rgb(89, 112, 119);
 }
 
@@ -59,18 +61,42 @@ h2 {
   margin-top: 1.5rem;
 }
 
+.addButton {
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+.deleteButton {
+  height: 30px;
+  width: auto;
+  text-align: center;
+  line-height: 3px;
+  margin-bottom: 7px;
+}
+
+.addButton:hover,
+.deleteBtn:hover {
+  cursor: pointer;
+}
+
+/* resume display styling*/
+
 .resultsContainer {
   background-color: white;
   display: flex;
   flex-direction: column;
-  height: 1000px;
-  width: 750px;
+  height: 800px;
+  width: 600px;
   border: 1px solid black;
   padding: 96px;
 }
 
+.resumeText {
+  font-size: 13px;
+}
+
 .resumeName {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bold;
 }
 
@@ -91,43 +117,10 @@ h2 {
   text-align: end;
 }
 
-/* .itemHeader {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: black;
-  background-color: rgba(110, 110, 110, 0.288);
-  padding: 1rem;
-  height: 10px;
-  margin-bottom: 1rem;
-  border-radius: 30px;
-} */
-
-.addButton {
-  font-weight: bold;
-  margin-top: 1rem;
-}
-
-.addButton:hover,
-.deleteBtn:hover {
-  cursor: pointer;
-}
-
-.deleteButton {
-  /* color: rgb(250, 250, 250);
-  background-color: rgb(204, 97, 97); */
-  height: 30px;
-  width: auto;
-  text-align: center;
-  line-height: 3px;
-  margin-bottom: 7px;
-}
-
 .resumeWork,
 .resumeEducation {
   margin-top: 1rem;
 }
-
 
 .workExperienceContainer {
   display: flex;
